Landing Page update of adding last 3-4 sections

--- a/index.html
+++ b/index.html
@@ -63,13 +63,94 @@
     <!-- Categories -->
 
     <section class="category">
-        <div>
-            
+        <div class="row">
+            <div class="product-img1 col col-lg-3 col-md-4 col-sm-6">
+                <a href="" class="img-product"><img srcset="images/headphone.jpeg" class="img-product"></a>
+                <h3 class="img-txt">Headphones</h3>
+            </div>
+            <div class="product-img2 col col-lg-3 col-md-4 col-sm-6">
+                <a href="" class="img-product"><img srcset="images/headphone.jpeg" class="img-product"></a>
+                <h3 class="img-txt">Headphones</h3>
+            </div>
+            <div class="product-img3 col col-lg-3 col-md-4 col-sm-6">
+                <a href="" class="img-product"><img srcset="images/headphone.jpeg" class="img-product"></a>
+                <h3 class="img-txt">Headphones</h3>
+            </div>
+            <div class="product-img4 col col-lg-3 col-md-4 col-sm-6">
+                <a href="" class="img-product"><img srcset="images/headphone.jpeg" class="img-product"></a>
+                <h3 class="img-txt">Headphones</h3>
+            </div>
         </div>
 
     </section>
 
+    <!-- Dinning experience -->
+    
+    <section class="experience">
+        <div>
+            <div class="img-double">
+                <a href=""><img srcset="images/cp.jpeg"></a>
+                <a href=""><img srcset="images/np.jpeg"></a>
+            </div>
+            <div>
+                <h5>DINNING EXPERINENCE</h5>
+                <h1>FINNEST FRESH INGREDIENTS</h1>
+                <p>At delhi deluxe, we only use fresh ingredients and all our food is prepared daily to ensure you recieve the highest quality possible - try and see for yourself.</p>
+                <a href=""><h5>MORE ABOUT US</h5></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact & other details -->
+    <section class="detcontact">
+        <div class="maindiv">
+            <div class="2subdivs">
+                <div class="3details">
+                    <div class="address">
+                        <h4>ADDRESS</h4>
+                        <p>23 Cartsburn street ,Greenock </p>
+                        <p>United Kingdom</p>
+                    </div>
+                    <div class="reservation">
+                        <h4>RESERVATION</h4>
+                        <p>014 7572 4478 / 014 7572 4411</p>
+                        <p>info@delhideluxe.com</p>
+                    </div>
+                    <div class="openninghours">
+                        <h4>OPENNING HOURS</h4>
+                        <p>Lunch : Monday - Friday 12 pm to 3:30 pm</p>
+                        <p>Dinner: Monday - Saturday 4 pm to 11 pm</p>
+                        <p>Dinner: Sunday 4 pm to 10 pm</p>
+                    </div>
+                </div>
+                <div class="2details">
+                    <div class="parkingdetails">
+                        <p>street parking after 7:00pm Monday to Saturday, feed the meter.</p>
+                        <p>Sunday free street parking.</p>
+                    </div>
+                    <div class="publictransit">
+                        <p>Walking distance from Penn Station 34th Street Herald Square: B,D,F,M & N,Q,R 33rd street station 4,6.</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <a href="" class="img-only"><img srcset="images/section4.jpeg" class="img-only"></a>
+            </div>
+        </div>
+    </section>
+    <section class="reserve">
+        <div>
+            <h1 class="reserve-title">AN EXTRAORDINARY DINING EXPERIENCE</h1>
+            <i class="fa-solid fa-star icon-star" style="color: #c79259;"></i><i class="fa-solid fa-star icon-star" style="color: #c79259;"></i><i class="fa-solid fa-star icon-star" style="color: #c79259;"></i>
+            <h6 class="reserve-text">A UNIQUE REGIONAL HOME STYLE DINING EXPERIENCE</h6>
+            <button type="button" class="btn btn-outline-warning btn-lg bg-btn">BOOK A TABLE</button>
+            <i class="fa-solid fa-star icon-star" style="color: #c79259;"></i><i class="fa-solid fa-star icon-star" style="color: #c79259;"></i><i class="fa-solid fa-star icon-star" style="color: #c79259;"></i>
+
+        </div>
+    </section>
+
     <footer>
+
 
     </footer>
 </body>
